--- a/ImgurTelegramBot/ImgurTelegramBot/packages.config
+++ b/ImgurTelegramBot/ImgurTelegramBot/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Imgur.API" version="4.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
