--- a/ImgurTelegramBot/ImgurTelegramBot.Webhooks/ImgurTelegramBot.Webhooks.csproj
+++ b/ImgurTelegramBot/ImgurTelegramBot.Webhooks/ImgurTelegramBot.Webhooks.csproj
@@ -133,8 +133,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\TelegramJob.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\TelegramController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
