--- a/ImgurTelegramBot/ImgurTelegramBot.Webhooks/Web.config
+++ b/ImgurTelegramBot/ImgurTelegramBot.Webhooks/Web.config
@@ -17,6 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
     <handlers>
@@ -66,4 +67,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+ 
 </configuration>
